[metadata]
name = pyportfolio
version = 0.1.1
description = CLI to consolidate and analyze your portfolio of investments 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Kaushik S Kalmady
url = https://github.com/kaushiksk/pyportfolio
keywords = cas, portfolio
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests==2.25.1
    casparser==0.4.4
    cutie==0.2.2
    click==7.1.2
    tabulate==0.8.7


[options.entry_points]
console_scripts =
    pyportfolio = pyportfolio.cli:main
